哎，还是一大堆

--- a/QJY.WEB/ViewV5/AppPage/APP_ADD_WF.html
+++ b/QJY.WEB/ViewV5/AppPage/APP_ADD_WF.html
@@ -30,9 +30,6 @@
     <script src="/ViewV5/JS/WFJS.js?ver=20171215"></script>
     <script src="/ViewV5/JS/YSteps/Steps.js"></script>
     <script src="/ViewV5/JS/chosen/chosen.jquery.min.js"></script>
-    <script src="http://47.92.121.230:9100/Web/qj_upload.js?v=3"></script>
-
-
     <style>
         .dvFile {
             display: inline-block;
@@ -305,11 +302,11 @@
     </div>
 
 
-    <table class="table navbar-fixed-bottom toolfootbar" style="background-color: #F8F8F8; width: 98%;">
+    <table class="table navbar-fixed-bottom toolfootbar" style="background-color: #F8F8F8; width: 100%;">
         <tbody>
             <tr class="wfdata" ms-if="TASKDATA.size()!=0">
                 <td>
-                    <div class="lcspstep" style="width: 1000px; overflow: auto;">
+                    <div class="lcspstep" style=" max-width: 950px; overflow: auto;">
                     </div>
                 </td>
             </tr>
