--- a/QJY.WEB/ViewV5/AppPage/CRM/KHCCLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/KHCCLIST.html
@@ -51,7 +51,7 @@
                         <td class="tc">
                            
                         </td>
-                        <td ms-repeat-im="ShowColumns" ms-css-min-width="im.width" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
+                        <td ms-repeat-im="ShowColumns" ms-css-min-width="im.width" ms-visible="im.IsSel">{{ComFunJS.FnFormat(el[im.ColName],im)|html}}</td>
                     </tr>
 
                 </tbody>
