--- a/QJY.WEB/ViewV5/AppPage/CRM/KHGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/CRM/KHGLVIEW.html
@@ -30,7 +30,7 @@
             <div class="detail-con">
                 <div class="detail-item" ms-repeat-el="ShowColumns" ms-visible="modelData[el.ColName]" ms-class-1="{{el.class}}">
                     <span class="item-tit">{{el.ColText}}</span>
-                    <div class="item-con">{{FnFormat(modelData[el.ColName],el)|html}}</div>
+                    <div class="item-con">{{ComFunJS.FnFormat(modelData[el.ColName],el)|html}}</div>
                 </div>
                 <div class="detail-item" ms-repeat-ext="modelData.SubExt">
                     <span class="item-tit">{{ext.TableFiledName}}</span>
@@ -116,7 +116,7 @@
                             <div class="detail-con">
                                 <div class="detail-item" ms-repeat-el="LXRShowColumns" ms-visible="item[el.ColName]">
                                     <span class="item-tit">{{el.ColText}}</span>
-                                    <div class="item-con">{{FnFormat(item[el.ColName],el)|html}}</div>
+                                    <div class="item-con">{{ComFunJS.FnFormat(item[el.ColName],el)|html}}</div>
                                 </div>
                                 <div class="detail-item" ms-repeat-ext="item.SubExt">
                                     <span class="item-tit">{{ext.TableFiledName}}</span>
@@ -140,7 +140,7 @@
                             <div class="detail-con">
                                 <div class="detail-item" ms-repeat-el="HTShowColumns" ms-visible="item[el.ColName]">
                                     <span class="item-tit">{{el.ColText}}</span>
-                                    <div class="item-con">{{FnFormat(item[el.ColName],el)|html}}</div>
+                                    <div class="item-con">{{ComFunJS.FnFormat(item[el.ColName],el)|html}}</div>
                                 </div>
                                 <div class="detail-item" ms-repeat-ext="item.SubExt">
                                     <span class="item-tit">{{ext.TableFiledName}}</span>
@@ -213,48 +213,8 @@
                             setTimeout(" ComFunJS.initForm()", 500)
                     })
                 }
-            },
-            FnFormat: function (str, fmt) { //格式化
-                if (str && fmt.format) {
-                    switch (fmt.format) {
-                        case "statename": //审核流程，-1时不需要流程
-                            {
-                                if (str == "-1") return "";
-                            }
-                            break;
-                        case "dateformat": //日期格式，默认yyyy-mm-dd
-                            {
-                                return ComFunJS.getnowdate("yyyy-mm-dd", str);
-                            }
-                            break;
-                        case "username": //用户id转成为用户名
-                            {
-                                return ComFunJS.convertuser(str);
-                            }
-                            break;
-                        case "qrcode": //二维码图片展示
-                            {
-                                return "<img src='" + str + "' style='width:60px;height:60px;' />"
-                            }
-                            break;
-                        case "bqh":
-                            {
-                                return ComFunJS.bqhContent(str);
-                            }
-                            break;
-                        case "text":
-                            {
-                                var len = fmt.len || 20;
-                                return ComFunJS.convstr(str + "", len);
-                            }
-                            break;
-                        default: {
-                            return "";
-                        }
-                    }
-                }
-                return str;
             }
+           
         });
         avalon.ready(function () {
             model.ShowColumns.clear();
