--- a/QJY.WEB/ViewV5/AppPage/HYGL/HYSLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/HYGL/HYSLIST.html
@@ -40,7 +40,7 @@
 
                         {{$index+1+page.pagecount*(page.pageindex-1)}}
                     </td>
-                    <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
+                    <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{ComFunJS.FnFormat(el[im.ColName],im)|html}}</td>
                     <td>
                         <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-click="EditForm('HYGL_HYS',el.ID,'',$event)">
                             <i class="iconfont icon-bianji"></i>
@@ -107,11 +107,9 @@
                 { "ColName": "IsDMT", "ColText": "是否有多媒体", "IsSel": true, "format": "text" },
                 { "ColName": "IsTYY", "ColText": "是否有投影仪", "IsSel": true, "format": "text" },
                 { "ColName": "Remark", "ColText": "备注", "IsSel": true, "format": "text" },
-                { "ColName": "IsDel", "ColText": "状态", "IsSel": true, "format": "hyszt" }
+                { "ColName": "IsDel", "ColText": "状态", "IsSel": true, "format": "zt" }
             ]);
             //类型数据
-
-        //    model.GetTypeData("1");
             tempindex.GetLIST();
         },
 
