--- a/QJY.WEB/ViewV5/AppPage/JYGL/TSGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/TSGLVIEW.html
@@ -5,22 +5,25 @@
 
         var tempindex = avalon.define({
             $id: "TSGLVIEW",
-            PCode: "TSGL",
+            PCode: "JYGL",
             InitWigetData: function (strId) {
                 model.title = "图书";
                 model.ShowColumns.pushArray(
                 [{ ColName: "TSNum", ColText: "图书编码", IsSel: true },
                       { ColName: "TypeName", ColText: "车类型", IsSel: true, },
                       { ColName: "TSName", ColText: "图书名称", IsSel: true, },
-                      { ColName: "BuyDate", ColText: "购买时间", IsSel: true,},
+                      { ColName: "BuyDate", ColText: "购买时间", IsSel: true, },
                       { ColName: "Price", ColText: "购买价格(元)", IsSel: true },
-                      { ColName: "authe", ColText: "作者", IsSel: true,},
-                      { ColName: "Status", ColText: "状态", IsSel: true, format: "clzt" }
+                      { ColName: "authe", ColText: "作者", IsSel: true, },
+                      { ColName: "cbs", ColText: "出版社", IsSel: true, },
+                      { ColName: "bc", ColText: "版次", IsSel: true, },
+                      { ColName: "SL", ColText: "在馆数量", IsSel: true, },
+                      { ColName: "Status", ColText: "状态", IsSel: true, format: "zt" }
                 ]);
 
                 if (strId) {
                     //编辑加载数据
-                    $.getJSON('/API/VIEWAPI.ashx?Action=TSGL_GETTSINFO', { P1: model.strId }, function (resultData) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=JYGL_GETTSINFO', { P1: model.strId }, function (resultData) {
                         if (resultData.ErrorMsg == "") {
                             model.modelData = resultData.Result;
                             setTimeout(" ComFunJS.initForm()", 500);
@@ -28,17 +31,6 @@
                         }
                     })
                 }
-            }, GetStatusName: function (status) {
-                var statusName = "";
-                switch (status) {
-                    case "0":
-                        statusName = "可用";
-                        break;
-                    case "1":
-                        statusName = "不可用";
-                        break;
-                }
-                return statusName;
             }
         });
         avalon.ready(function () {
