--- a/QJY.WEB/ViewV5/AppPage/LCSP/LCSPTJ.html
+++ b/QJY.WEB/ViewV5/AppPage/LCSP/LCSPTJ.html
@@ -56,7 +56,7 @@
                     <tr ms-repeat-el="tmpListData">
                         <td class="tc">
                         </td>
-                        <td ms-repeat-im="ShowColumns" style="min-width: 120px; white-space: nowrap" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
+                        <td ms-repeat-im="ShowColumns" style="min-width: 120px; white-space: nowrap" ms-visible="im.IsSel">{{ComFunJS.FnFormat(el[im.ColName],im)|html}}</td>
                     </tr>
                 </tbody>
                 <tfoot>
