--- a/QJY.WEB/ViewV5/AppPage/XTGL/SZMXLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/XTGL/SZMXLIST.html
@@ -38,7 +38,7 @@
                     <td class="tc">
                         
                     </td>
-                    <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
+                    <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{ComFunJS.FnFormat(el[im.ColName],im)|html}}</td>
                     <!--<td>
 
                         <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="编辑" ms-click="AddView('RWGL','修改任务',el.ID,$event)">
