--- a/QJY.WEB/WZWeb/history.html
+++ b/QJY.WEB/WZWeb/history.html
@@ -412,6 +412,23 @@
 
             <ul class="timeline">
                 <li>
+                    <div class="time">2018-4-30</div>
+                    <div class="version">v1.2.0</div>
+                    <div class="number"></div>
+                    <div class="content">
+                        <pre>
++ 文件中心更换为新版，支持office文件预览（ppt,word.pdf),支持简单的文件中心管理端
++ 更换了文件上传的调用方式，用户可以根据webupload的参数自定义上传参数
++ 优化了session问题导致的ajax请求慢的问题，很重要！！（谢谢群里的"szxz的午后"兄弟）
++ 添加了一个手机端登录页面UI_Login.html,可以通过这个页面调试手机端
++ 优化微信端页面的加载逻辑，手机端的选择人员界面暂时不再请求头像，改成固定头像了
++ PC端统一采用本地的ICON样式文件，不再请求阿里的了
++ 查询人员界面加了个按照名称搜索
+                                                    
+</pre>
+                    </div>
+                </li>
+                <li>
                     <div class="time">2017-11-02</div>
                     <div class="version">v1.1.8</div>
                     <div class="number"></div>
