--- a/QJY.WEB/ViewV5/AppPage/APPVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/APPVIEW.html
@@ -43,15 +43,15 @@
             <div class="detail-con">
                 <div class="detail-item" ms-repeat-el="ShowColumns" ms-visible="titletype ==1&&modelData[el.ColName]" ms-class-1="{{el.class}}">
                     <span class="item-tit">{{el.ColText}}</span>
-                    <div class="item-con">{{FnFormat(modelData[el.ColName],el)|html}}</div>
+                    <div class="item-con">{{ComFunJS.FnFormat(modelData[el.ColName],el)|html}}</div>
                 </div>
                 <div class="detail-item" ms-repeat-el="ShowColumns1" ms-visible="titletype ==2&&modelData[el.ColName]" ms-class-1="{{el.class}}">
                     <span class="item-tit">{{el.ColText}}</span>
-                    <div class="item-con">{{FnFormat(modelData[el.ColName],el)|html}}</div>
+                    <div class="item-con">{{ComFunJS.FnFormat(modelData[el.ColName],el)|html}}</div>
                 </div>
                 <div class="detail-item" ms-repeat-el="ShowColumns2" ms-visible="titletype ==3 && modelData[el.ColName]" ms-class-1="{{el.class}}">
                     <span class="item-tit">{{el.ColText}}</span>
-                    <div class="item-con">{{FnFormat(modelData[el.ColName],el)|html}}</div>
+                    <div class="item-con">{{ComFunJS.FnFormat(modelData[el.ColName],el)|html}}</div>
                 </div>
                 <div ms-include-src="/ViewV5/AppPage/{{PathCode}}/{{FormCode}}VIEW.html" data-include-rendered='Temprender'>
                 </div>
@@ -211,6 +211,7 @@
             Temprender: function () {
                 if (typeof (tempindex) != "undefined") {
                     tempindex.InitWigetData(model.strId);
+                        model.getwfdata();
                 }
                 avalon.templateCache = null;
 
@@ -235,16 +236,16 @@
             },
             CancelWF: function () {//撤回表单到草稿箱
                 ComFunJS.winconfirm("确认要撤回此流程吗？", function () {
-                $.getJSON("/API/VIEWAPI.ashx?ACTION=LCSP_CANCELWF", { P1: model.PIID, DataID: model.strId, ModelCode: model.FormCode, P2: model.PIMODEL.PDID }, function (result) {
-                    if (result.ErrorMsg == "") {//流程数据
-                        model.ISCANCEL = "N";
-                        top.ComFunJS.winconfirm("操作成功,该表单已撤回到草稿箱,是否要重新发起该表单", function () {
-                            location.href = "/ViewV5/AppPage/APP_ADD_WF.html?FormCode=" + model.FormCode + "&PDID=" + model.PIMODEL.PDID + "&lctype=" + model.lctype;
-                        }, function () {
-                            top.layer.closeAll();
-                        })
-                    }
-                })
+                    $.getJSON("/API/VIEWAPI.ashx?ACTION=LCSP_CANCELWF", { P1: model.PIID, DataID: model.strId, ModelCode: model.FormCode, P2: model.PIMODEL.PDID }, function (result) {
+                        if (result.ErrorMsg == "") {//流程数据
+                            model.ISCANCEL = "N";
+                            top.ComFunJS.winconfirm("操作成功,该表单已撤回到草稿箱,是否要重新发起该表单", function () {
+                                location.href = "/ViewV5/AppPage/APP_ADD_WF.html?FormCode=" + model.FormCode + "&PDID=" + model.PIMODEL.PDID + "&lctype=" + model.lctype;
+                            }, function () {
+                                top.layer.closeAll();
+                            })
+                        }
+                    })
                 }, function () { })
             },
             getwfdata: function () {
@@ -378,171 +379,6 @@
                         }
                     }
                 })
-            },
-            //格式化
-            FnFormat: function (str, fmt) { //格式化
-                str = str + "";
-                if (str && fmt.format) {
-
-                    switch (fmt.format) {
-                        case "shstate": //审核状态转换成文字
-                            {
-                                if (str == "0") {
-                                    str = "未审核";
-                                } else if (str == "-1") {
-                                    str = "审核不通过";
-                                } else if (str == "1") {
-                                    str = "审核通过";
-                                }
-                            }
-                            break;
-
-                        case "statename": //审核流程，-1时不需要流程
-                            {
-                                if (str == "-1") str = "";
-                            }
-                            break;
-                        case "rwstate": //任务状态
-                            {
-                                if (str == "0") str = "待办任务";
-                                else if (str == "1") str = "已办任务";
-                                else if (str == "2") str = "过期任务";
-                            }
-                            break;
-                        case "dateformat": //日期格式，默认yyyy-mm-dd
-                            {
-                                str = ComFunJS.getnowdate("yyyy-mm-dd", str);
-                            }
-                            break;
-                        case "timeformat": //日期格式，默认yyyy-mm-dd
-                            {
-                                str = ComFunJS.getnowdate("yyyy-mm-dd hh:mm", str);
-                            }
-                            break;
-                        case "username": //用户id转成为用户名
-                            {
-                                str = ComFunJS.convertuser(str);
-                            }
-                            break;
-                        case "qrcode": //二维码图片展示
-                            {
-                                str = "<img src='" + str + "' style='width:60px;height:60px;' />"
-                            }
-                            break;
-                        case "bqh"://表情转换
-                            {
-                                return ComFunJS.bqhContent(str);
-                            }
-                            break;
-                        case "text"://截取字符串
-                            {
-                                str = ComFunJS.convstr(str);
-                            }
-                            break;
-                        case "txfs"://提醒方式
-                            {
-                                switch (str) {
-                                    case "0": str = '短信和微信'; break;
-                                    case "1": str = '短信'; break;
-                                    case "2": str = '微信'; break;
-                                }
-
-                            }
-                            break;
-                        case "hdlx"://活动类型
-                            {
-                                switch (str) {
-                                    case "0": str = '企业活动'; break;
-                                    case "1": str = '企业投票'; break;
-                                }
-                            }
-                            break;
-                        case "hdzt"://活动状态
-                            {
-                                switch (str) {
-                                    case "0": str = '已结束'; break;
-                                    case "1": str = '未开始'; break;
-                                    case "2": str = '正在进行'; break;
-                                }
-                            }
-                            break;
-                        case "sr":     //收入明细
-                            {
-                                if (str * 1 >= 0)
-                                    str = "￥" + str;
-                                else
-                                    str = "--";
-                            }
-                            break;
-                        case "zc":    //支出明细
-                            {
-                                if (str * 1 >= 0)
-                                    str = "--";
-                                else
-                                    str = "￥" + str;
-                            }
-                            break;
-                        case "dyxx":    //快递json转换
-                            {
-                                if (str) {
-                                    var jsonresult = $.parseJSON(str);
-                                    var txtmsg = '';
-                                    jsonresult.forEach(function (item) {
-                                        txtmsg = txtmsg + item.title + ":" + item.text + "，";
-                                    });
-                                    str = txtmsg;
-                                }
-                            }
-                            break;
-                        case "clzt":    //车辆状态
-                            {
-                                switch (str) {
-                                    case "0": str = '可用'; break;
-                                    case "1": str = '报废'; break;
-                                    case "2": str = '维修'; break;
-                                }
-                            }
-                            break;
-                        case "hyszt":     //会议室状态
-                            {
-                                switch (str) {
-                                    case "0": str = '启用'; break;
-                                    case "1": str = '禁用'; break;
-                                }
-                            }
-                            break;
-                        case "ksapstatus":
-
-                            switch (str) {
-                                case "0":
-                                    str = "未开始";
-                                    break;
-                                case "1":
-                                    str = "进行中";
-                                    break;
-                                case "2":
-                                    str = "考试已结束";
-                                    break;
-                                case "3":
-                                    str = "阅卷已结束";
-                                    break;
-                            }
-                            break
-                        case "kjtype":
-                            switch (str) {
-                                case "1": str = '视频'; break;
-                                case "2": str = '文档'; break;
-                            }
-                            break;
-                        default: {
-
-                        }
-                    }
-                }
-                if (fmt.len) {
-                    str = str.length > fmt.len ? str.substring(0, fmt.len) + '...' : str;
-                }
-                return str;
             }
         });
         avalon.ready(function () {
@@ -554,7 +390,6 @@
                 model.PathCode = FormCode;
                 model.FormCode = FormCode;
             }
-            model.getwfdata();
         })
     </script>
 </body>
