--- a/QJY.WEB/ViewV5/AppPage/CCXJ/CCXJBRANCH.html
+++ b/QJY.WEB/ViewV5/AppPage/CCXJ/CCXJBRANCH.html
@@ -49,7 +49,7 @@
                         <td class=" tc">
                         
                         </td>
-                        <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
+                        <td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{ComFunJS.FnFormat(el[im.ColName],im)|html}}</td>
                         <td>
                             <a ms-click="ViewForm(el.CRUser,el.ccMonth,el.LeiBie)" class="cz-btn ft18 bj-color tip" data-toggle="tooltip" title="" data-original-title="查看">
                                 <i class="iconfont icon-look"></i>
