--- a/QJY.WEB/ViewV5/AppPage/CCXJ/CCXJLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/CCXJ/CCXJLIST.html
@@ -52,7 +52,7 @@
                    
                         {{$index+1+page.pagecount*(page.pageindex-1)}}
                     </td>
-                    <td ms-repeat-im="ShowColumns" ms-class-1="lk:im.type=='link'" ms-click="ViewFormNew('CCXJ_CCXJ',el.ID,el.intProcessStanceid,$event)" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>
+                    <td ms-repeat-im="ShowColumns" ms-class-1="lk:im.type=='link'" ms-click="ViewFormNew('CCXJ_CCXJ',el.ID,el.intProcessStanceid,$event)" ms-visible="im.IsSel">{{ComFunJS.FnFormat(el[im.ColName],im)|html}}</td>
                     <td>
                         <a class="cz-btn ft18 js-color tip" data-toggle="tooltip" title="审批" ms-click="EditForm('CCXJ_CCXJ',el.ID,el.intProcessStanceid,$event)" ms-if="el.StateName!='-1'&&search.seartype==2">
                             <i class="iconfont icon-shenhe"></i>
