--- a/QJY.WEB/ViewV5/AppPage/JYGL/JYGLVIEW.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/JYGLVIEW.html
@@ -8,17 +8,16 @@
             InitWigetData: function (strId) {
                 model.title = "借阅管理";
                 model.ShowColumns.pushArray(
-                [{ ColName: "SYUser", ColText: "申请人", IsSel: true, "class": "width50", format: "username" },
+                [{ ColName: "JYRName", ColText: "借阅人", IsSel: true, "class": "width50" },
                     { ColName: "StartTime", ColText: "开始时间", "class": "width50", IsSel: true, format: "dateformat" },
                       { ColName: "EndTime", ColText: "结束时间", "class": "width50", IsSel: true, format: "dateformat" },
-                      { ColName: "TSType", ColText: "图书类别", "class": "width50", IsSel: true },
-                      { ColName: "TSNum", ColText: "使用图书", "class": "width50", IsSel: true },
+                      { ColName: "TSName", ColText: "使用图书", "class": "width50", IsSel: true },
                       { ColName: "Remark", ColText: "使用说明", IsSel: true }
                 ]);
 
                 if (strId) {
                     //编辑加载数据
-                    $.getJSON('/API/VIEWAPI.ashx?Action=TSGL_GETJYGLLIST', { P1: "all", ID: model.strId }, function (resultData) {
+                    $.getJSON('/API/VIEWAPI.ashx?Action=JYGL_GETJYGLLIST', { P1: "all", ID: model.strId }, function (resultData) {
                         if (resultData.ErrorMsg == "") {
                             model.modelData = resultData.Result[0];
                             model.tpData = resultData.Result[0].FileList;
