--- a/QJY.WEB/ViewV5/AppPage/JYGL/TSGL.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/TSGL.html
@@ -30,7 +30,7 @@
                     </div>
                 </li>
                 <li class="add-item add-width fl-left">
-                    <label class="add-item-label"><i>*</i>状态</label>
+                    <label class="add-item-label"><i>*</i>可用状态</label>
                     <div class="add-ic">
                         <select ms-duplex-selected="modelData.Status" class="form-control">
                             <option value="0">可用</option>
@@ -45,9 +45,27 @@
                     </div>
                 </li>
                 <li class="add-item add-width fl-left">
+                    <label class="add-item-label">出版社</label>
+                    <div class="add-ic">
+                        <input type="text" ms-duplex="modelData.cbs" class="form-control" maxlength="50" />
+                    </div>
+                </li>
+                <li class="add-item add-width fl-right">
+                    <label class="add-item-label">版次</label>
+                    <div class="add-ic">
+                        <input type="text" ms-duplex="modelData.bc" class="form-control" maxlength="50" />
+                    </div>
+                </li>
+                <li class="add-item add-width fl-left">
                     <label class="add-item-label">购买价格(单位:元)</label>
                     <div class="add-ic">
                         <input type="text" ms-duplex="modelData.Price" class="form-control" maxlength="50" />
+                    </div>
+                </li>
+                <li class="add-item add-width fl-right">
+                    <label class="add-item-label">在馆数量</label>
+                    <div class="add-ic">
+                        <input type="text" ms-duplex="modelData.SL" class="form-control" maxlength="50" />
                     </div>
                 </li>
                 <li class="add-item add-widthall">
@@ -78,7 +96,7 @@
             })
             if (strId) {
                 //编辑加载数据
-                $.getJSON('/API/VIEWAPI.ashx?Action=TSGL_GETTSINFO', { P1: strId }, function (resultData) {
+                $.getJSON('/API/VIEWAPI.ashx?Action=JYGL_GETTSINFO', { P1: strId }, function (resultData) {
                     if (resultData.ErrorMsg == "") {
                         tempmodel.modelData = resultData.Result;
                         setTimeout(" ComFunJS.initForm()", 500)
@@ -88,10 +106,10 @@
                 ComFunJS.initForm();
             }
         },//初始化
-        modelData: { "TSNum": "", "TSType": "", "TSName": "", "BuyDate": "", "Price": "", "auther": "",  "Status": 0, "Files": "","TSTypeName":"" },
+        modelData: { "TSNum": "", "TSType": "", "TSName": "", "BuyDate": "", "Price": "", "auther": "", "Status": 0, "Files": "", "TSTypeName": "", "SL": "1", "bc": "", "cbs": "", "jystatus": "0" },
         SaveData: function (callback) {
             tempmodel.modelData.TSTypeName = $("#conType").find("option:selected").text();
-            $.post("/API/VIEWAPI.ashx?ACTION=TSGL_ADDTSINFO", { P1: JSON.stringify(tempmodel.modelData.$model) }, function (result) {
+            $.post("/API/VIEWAPI.ashx?ACTION=JYGL_ADDTSINFO", { P1: JSON.stringify(tempmodel.modelData.$model) }, function (result) {
                 return callback.call(this,result);
             });
         }
