--- a/QJY.WEB/ViewV5/AppPage/JYGL/TSKLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/TSKLIST.html
@@ -1,30 +1,29 @@
-﻿<div ms-controller="TXGLLIST">
+﻿<div ms-controller="TSGLLIST">
     <!-- 添加按钮 -->
     <div class="btn-add">
-        <button type="button" class="btn btn-info btn-lg" ms-click="AddView('TXSX')"><i class="iconfont icon-jiahao ft12 mr5"></i>添加提醒</button>
+        <button type="button" class="btn btn-info btn-lg" ms-click="addJY()"><i class="iconfont icon-jiahao ft12 mr5"></i>添加借阅</button>
     </div>
     <!-- 按条件选择 -->
     <div class="tab-filter-type">
         <div class="oh">
-            <h5 class="pull-left tr">类型：</h5>
+            <h5 class="pull-left tr">图书类型：</h5>
             <ul class="tab-type ft14">
-                <li ms-click="SelectType('1')"><span class="active">我创建的</span></li>
-                <li ms-click="SelectType('2')"><span>提醒我的</span></li>
+                <li ms-click="SelectTSType('')"><span class="active">全部</span></li>
+                <li ms-repeat-el="TypeData" ms-click="SelectTSType(el.ID)"><span>{{el.TypeName}}</span></li>
             </ul>
         </div>
         <div class="oh">
-            <h5 class="pull-left tr">提醒类型：</h5>
+            <h5 class="pull-left tr">借阅状态：</h5>
             <ul class="tab-type ft14">
-                <li ms-click="SelectXJType('')"><span class="active">全部</span></li>
-                <li ms-click="SelectXJType('0')"><span>短信和微信</span></li>
-                <li ms-click="SelectXJType('1')"><span>短信</span></li>
-                <li ms-click="SelectXJType('2')"><span>微信</span></li>
+                <li  ms-click="SelectJYType('0')"><span  class="active">可借阅</span></li>
+                <li  ms-click="SelectJYType('1')"><span>借阅中</span></li>
+
             </ul>
         </div>
         <!-- 搜索 -->
         <div class="oh">
             <div class="input-group ml15" style="width:295px;">
-                <input type="search" class="form-control" ms-duplex="search.searchcontent" placeholder="搜索提醒内容">
+                <input type="search" class="form-control" ms-duplex="search.searchcontent" placeholder="搜索图书名称">
                 <span class="input-group-addon" ms-click="GetLIST()">搜索</span>
             </div>
         </div>
@@ -34,38 +33,39 @@
         <span>更多筛选<i class="caret"></i></span>
     </div>
     <!-- 表格 -->
-    <div class="default-tab ft14 pt20 hover-btn">
+    <div class="default-tab ft14 pt20">
         <table class="table table-striped table-responsive table-hover">
             <thead>
                 <tr>
-                    <th class="tc">
+                    <th style="text-align:center;width:100px" ms-if="curJYType=='0'">
+                        <div class="icheckbox_square-blue">
+                            <span class="iconfont icon-check ft12"></span>
+                        </div>
                     </th>
-                    <!--<th ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{im.ColText}}</th>-->
-                    <th>提醒人</th>
-                    <th>提醒方式</th>
-                    <th>提醒模式</th>
-                    <th>提醒内容</th>
-                    <th></th>
+                    <th  ms-class-1="tc:curJYType=='1'">  序号</th>
+                    <th>编码</th>
+                    <th>图书类别</th>
+                    <th>图书名称</th>
+                    <th>作者</th>
+                    <th>购买时间</th>
+                    <th>借阅状态</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ms-repeat-el="tmpListData">
-                    <td class=" tc"></td>
-                    <!--<td ms-repeat-im="ShowColumns" ms-visible="im.IsSel">{{FnFormat(el[im.ColName],im)|html}}</td>-->
-                    <td>{{ComFunJS.FnFormat(el.TXUser,{"format": "username"})|html}}</td>
-                    <td>{{el.Type=='0'?'短信和微信':el.Type=='1'?'短信':'微信'}}</td>
-                    <td>{{el.TXMS}}</td>
-                    <td>{{el.TXContent}}</td>
-                    <td style="min-width:100px;">
-                        <span class=" btn-click">
-                            <a class="cz-btn ft18 bj-color tip" data-toggle="tooltip" ms-if="el.CRUser==userName" title="编辑" ms-click="EditForm('TXSX',el.ID,'',$event)">
-                                <i class="iconfont icon-bianji"></i>
-                            </a>
-                            <a class="cz-btn ft18 sc-color tip" data-toggle="tooltip" ms-if="el.CRUser==userName" title="删除" ms-click="DELTXSX(el,$event)">
-                                <i class="iconfont icon-shanchu"></i>
-                            </a>
-                        </span>
+                    <td style="text-align:center;width:100px" ms-if="curJYType=='0'">
+                        <div class="icheckbox_square-blue ts" ms-attr-tsid="el.ID">
+                            <span class="iconfont icon-check ft12"></span>
+                        </div>
+
                     </td>
+                    <td ms-class-1="tc:curJYType=='1'">{{$index+1+page.pagecount*(page.pageindex-1)}}</td>
+                    <td>{{el.TSNum}}</td>
+                    <td>{{el.TSTypeName}}</td>
+                    <td class="lk" ms-click="ViewForm('JYGL_TSGL',el.ID,'',$event)">{{el.TSName}}</td>
+                    <td>{{el.auther}}</td>
+                    <td>{{el.BuyDate}}</td>
+                    <td>{{el.jystatus=='0'?"可借阅":"借阅中"}}</td>
                 </tr>
 
             </tbody>
@@ -93,15 +93,33 @@
 <script>
 
     var tempindex = avalon.define({
-        $id: "TXGLLIST",
-        tmpListData:[],
-        curXJType: "",
+        $id: "TSGLLIST",
+        curTSType: "",
+        curJYType: "0",
+        tmpListData: [],
+        addJY: function () {
+            var tsids = "";
+            $(".ts").each(function () {
+                if ($(this).hasClass("checked")) {
+                    tsids = tsids + $(this).attr("tsid") + ",";
+                }
+            })
+            if (!tsids) {
+                top.ComFunJS.winwarning("请先选择图书再申请!");
+                return;
+            }
+            ComFunJS.winviewform("/ViewV5/AppPage/APP_ADD_WF.html?FormCode=JYGL&tsids=" + tsids, "借阅申请", "1000");
+        },
         SelectType: function (type) {
             model.search.seartype = type;
             tempindex.GetLIST();
         },
-        SelectXJType: function (type) {
-            tempindex.curXJType = type;
+        SelectTSType: function (type) {
+            tempindex.curTSType = type;
+            tempindex.GetLIST();
+        },
+        SelectJYType: function (type) {
+            tempindex.curJYType = type;
             tempindex.GetLIST();
         },
         selNum: function (item) {    //选择显示的条数
@@ -109,29 +127,15 @@
             tempindex.GetLIST();
         },
         InitWigetData: function () {
-
-            //显示的列名
-            model.ShowColumns.clear();
+            model.search.seartype = "";
+            model.GetTypeData("24");
             tempindex.GetLIST();
         },
-        DELTXSX: function (item, event) {
-            if (event.stopPropagation) {
-                event.stopPropagation();
-            }
-            top.ComFunJS.winconfirm("确认要删除提醒吗？", function () {
-                $.post("/API/VIEWAPI.ashx?ACTION=TXSX_DELTXSX", { P1: item.ID }, function (result) {
-                    if ($.trim(result.ErrorMsg) == "") {
-                        tempindex.tmpListData.remove(item);
-                        top.ComFunJS.winsuccess("删除成功");
 
-                    }
-                });
-            })
-        },
         GetLIST: function () {
             model.page.pageindex = 1;
             tempindex.tmpListData.clear();
-            $.getJSON('/API/VIEWAPI.ashx?Action=TXSX_GETTXSXLIST', { p: 1, type: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent, P2: tempindex.curXJType }, function (resultData) {
+            $.getJSON('/API/VIEWAPI.ashx?Action=JYGL_GETTSLIST_PAGE', { p: 1, P1: model.search.searchcontent, P2: tempindex.curTSType, pagecount: model.page.pagecount, kystatus: "0", jystatus: tempindex.curJYType }, function (resultData) {
                 if (resultData.ErrorMsg == "") {
                     tempindex.tmpListData = resultData.Result;
                     if (tempindex.tmpListData.size() == 0) { model.isnull = true; } else { model.isnull = false; }
@@ -143,7 +147,7 @@
                         skin: 'molv',
                         jump: function (e) { //触发分页后的回调
                             if (e.curr != model.page.pageindex) {
-                                $.getJSON('/API/VIEWAPI.ashx?Action=TXSX_GETTXSXLIST', { p: e.curr, type: model.search.seartype, pagecount: model.page.pagecount, Content: model.search.searchcontent, P2: tempindex.curXJType }, function (resultData) {
+                                $.getJSON('/API/VIEWAPI.ashx?Action=JYGL_GETTSLIST_PAGE', { p: e.curr, P1: model.search.seartype, P2: tempindex.curTSType, pagecount: model.page.pagecount, kystatus: "0", jystatus: tempindex.curJYType }, function (resultData) {
                                     if (resultData.ErrorMsg == "") {
                                         tempindex.tmpListData = resultData.Result;
                                     }
@@ -156,4 +160,5 @@
             })
         }
     })
+    //@ sourceURL=TSGLLIST.js;
 </script>
