--- a/QJY.WEB/ViewV5/AppPage/QYWD/QYWDGL.html
+++ b/QJY.WEB/ViewV5/AppPage/QYWD/QYWDGL.html
@@ -62,7 +62,7 @@
 
 <div ms-controller="APP_QYWDM">
     <div class="padding20">
-        <button type="button" class="btn btn-success"  id="qjupload" ><i class="iconfont icon-shangchuan ft14 mr5"></i>上传文件</button>
+        <button type="button" class="btn btn-success" id="qjupload"><i class="iconfont icon-shangchuan ft14 mr5"></i>上传文件</button>
         <button type="button" class="btn btn-success" data-toggle="modal" data-target="#addForderModal"><i class="iconfont icon-xinjian ft14 mr5"></i>新建文件夹</button>
         <button type="button" class="btn btn-info ml20" ms-click="downloaditem()"><i class="iconfont icon-xiazai ft14 mr5"></i>下载</button>
         <button type="button" class="btn btn-info" ms-click="delitem()"><i class="iconfont icon-shanchu ft14 mr5"></i>删除</button>
@@ -550,31 +550,33 @@
             })
         },
         initFile: function () {
-            new QJUpload({
-                uploadButtton: 'qjupload',
-                fileapiurl: ComFunJS.getfileapi(),
-                usercode: "qycode",
-                secret: "qycode",
-                upinfo: "上传组件",
-                webupconfig: {
-                    fileNumLimit: 5,
-                },
-                closeupwin: function (fileData, dom) {
-                    var nowfolderid = tempindex.Pathdata[tempindex.Pathdata.length - 1].ID;
-                    var fjids = "";
-                    $.post('/API/VIEWAPI.ashx?Action=QYWD_ADDFILE', { "P1": fileData, "P2": nowfolderid }, function (result) {
-                        if (result.ErrorMsg == "") {
-                            var filedata = result.Result;//给filedata赋值,供页面使用
-                            filedata.forEach(function (item) {
-                                item.issel = false;
-                                item.type = "file";
-                            })
-                            tempindex.FileList.pushArray(filedata)
-                           
-                        }
-                    })
-                }
-            });
+            ComFunJS.loadJs(ComFunJS.getfileapi() + "/Web/qj_upload.js", function () {
+                new QJUpload({
+                    uploadButtton: 'qjupload',
+                    fileapiurl: ComFunJS.getfileapi(),
+                    usercode: "qycode",
+                    secret: "qycode",
+                    upinfo: "上传组件",
+                    webupconfig: {
+                        fileNumLimit: 5,
+                    },
+                    closeupwin: function (fileData, dom) {
+                        var nowfolderid = tempindex.Pathdata[tempindex.Pathdata.length - 1].ID;
+                        var fjids = "";
+                        $.post('/API/VIEWAPI.ashx?Action=QYWD_ADDFILE', { "P1": fileData, "P2": nowfolderid }, function (result) {
+                            if (result.ErrorMsg == "") {
+                                var filedata = result.Result;//给filedata赋值,供页面使用
+                                filedata.forEach(function (item) {
+                                    item.issel = false;
+                                    item.type = "file";
+                                })
+                                tempindex.FileList.pushArray(filedata)
+
+                            }
+                        })
+                    }
+                });
+            })
         },
         downloaditem: function () {
             if (tempindex.SelItemData.size() == 0) {
