--- a/QJY.WEB/ViewV5/AppPage/XTGL/YGINDEX.html
+++ b/QJY.WEB/ViewV5/AppPage/XTGL/YGINDEX.html
@@ -166,7 +166,7 @@
                                 <span ms-if="item.IsUse=='Y'" class="ico-radius-r color-greed"></span>{{item.UserRealName}}
                             </td>
 
-                            <td ms-repeat-im="ShowColumns" style="min-width: 120px;" ms-visible="im.IsSel">{{FnFormat(item[im.ColName],im)|html}}</td>
+                            <td ms-repeat-im="ShowColumns" style="min-width: 120px;" ms-visible="im.IsSel">{{ComFunJS.FnFormat(item[im.ColName],im)|html}}</td>
                             <td>
                                 <div style="position: relative" class="bg-fun">
                                     <span class="iconfont icon-shanchu  c-default cursor tip mr5" title="删除用户" ms-click="DelUser(item);" ms-if="item.isSupAdmin!='Y'"></span>
